hacky fix of height of board section but scrollbar seems to be going off viewport - not sure if it matters..

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -53,6 +53,7 @@ a {
   right: 0;
   padding-left: 1%;
   padding-right: 1%;
+  min-height: 100%;
 }
 
 input {
